--- a/kube-apiserver-amd64/Dockerfile
+++ b/kube-apiserver-amd64/Dockerfile
@@ -1,2 +1,2 @@
-FROM gcr.io/google_containers/kube-apiserver-amd64:v1.14.1
+FROM k8s.gcr.io/kube-apiserver:v1.14.1
 MAINTAINER Tony.lin 812158452@qq.com
